@@ -1,0 +1,20 @@
+<!-- **********************************************************************
+    4                                   more.docbook
+    5                           +++++++++++++++++++++++++++
+    6   copyright            : (C) 2000 - 2010
+    7                          XXXXXX
+    8                          XXXX
+    9   e-mail               : XXXX@XXXX
+   10   web site             : YYYYYY
+   11   description          : something
+   12 
+   13 ***************************************************************************
+   14 * Permission is granted to copy, distribute and/or modify this            *
+   15 * document under the terms of the GNU Free Documentation License,         *
+   16 * Version 1.1 or any later version published by the Free Software         *
+   17 * Foundation; with no Invariant Sections, no Front-Cover Texts and        *
+   18 * no Back-Cover Texts.  A copy of the license is available on the         *
+   19 * GNU site http://www.gnu.org/licenses/fdl.html or by writing to:         *
+   20 * Free Software Foundation, Inc., 59 Temple Place - Suite 330, Boston,    *
+   21 * MA 02111-1307, USA.                                                     *
+   22 *********************************************************************** -->
